--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,8 +8,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
+}
+
+.patternBackground {
+  background-image: url(../public/assets/alphatwt_pattern.png);
 }
 
 .footer {
@@ -113,4 +117,20 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.main button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  gap: 8px;
+  color: white;
+
+  width: 184px;
+  height: 46px;
+
+  background: #373a3e;
+  border-radius: 24px;
 }
