--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -134,3 +134,44 @@
   background: #373a3e;
   border-radius: 24px;
 }
+
+.main [type="submit"] {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  gap: 8px;
+  color: white;
+
+  width: 184px;
+  height: 46px;
+
+  background: #373a3e;
+  border-radius: 24px;
+}
+
+.main hr {
+  width: 600px;
+  height: 0px;
+
+  border: 2px solid #494e53;
+
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+.contentScreen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 28px;
+
+  width: 571px;
+  height: 817px;
+  left: 595px;
+  top: 248px;
+  color: red;
+}
